--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "ngoo-server-2025",
   "version": "1.0.0",
-  "main": "index.ts",
   "repository": "https://github.com/ThanhNguyen03/ngoo-server-2025.git",
   "author": "thanhf.ng_ <thanhfng.dev@gmail.com>",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "generate": "graphql-codegen --config ./src/codegen.ts",
+    "check": "npm run fix && prettier --check --write ./src/**/*.ts && npm run test && npm run build",
+    "lint": "eslint",
+    "fix": "eslint --fix",
+    "dev": "tsx --watch src/index.ts",
+    "dev:debug": "tsx --inspect ./src/index.ts"
+  },
   "dependencies": {
-    "@apollo/server": "^5.0.0",
+    "@apollo/server": "4.11.2",
     "axios": "^1.12.2",
     "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "express-session": "^1.18.2",
+    "dotenv": "^17.2.3",
+    "express": "4.21.2",
+    "express-session": "1.18.1",
     "graphql": "^16.11.0",
-    "redis": "^5.8.3"
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
+    "redis": "^5.8.3",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^6.0.0",
