--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   },
   "dependencies": {
     "@apollo/server": "4.11.2",
-    "axios": "^1.12.2",
-    "connect-redis": "^9.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "connect-redis": "9.0.0",
+    "cors": "2.8.5",
+    "dotenv": "17.2.3",
     "express": "4.21.2",
     "express-session": "1.18.1",
-    "graphql": "^16.11.0",
-    "helmet": "^8.1.0",
-    "joi": "^18.0.1",
-    "redis": "^5.8.3",
-    "tsx": "^4.20.6"
+    "graphql": "16.11.0",
+    "helmet": "8.1.0",
+    "joi": "18.0.1",
+    "mongoose": "8.19.2",
+    "redis": "5.8.3",
+    "tsx": "4.20.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^6.0.0",
-    "@graphql-codegen/typescript": "^5.0.2",
-    "@graphql-codegen/typescript-resolvers": "^5.1.0",
-    "@types/cors": "^2.8.19",
-    "@types/express-session": "^1.18.2",
-    "@types/node": "^24.7.2",
-    "eslint": "^9.37.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "@graphql-codegen/cli": "6.0.0",
+    "@graphql-codegen/typescript": "5.0.2",
+    "@graphql-codegen/typescript-resolvers": "5.1.0",
+    "@types/cors": "2.8.19",
+    "@types/express-session": "1.18.2",
+    "@types/node": "24.7.2",
+    "eslint": "9.37.0",
+    "prettier": "3.6.2",
+    "typescript": "5.9.3"
   }
 }
