--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
       "@/apollo-api": ["./src/apollo"],
       "@/model": ["./src/model"],
       "@/helper": ["./src/helper"],
-      "@/utils": ["./src/utils"],
-      "@/generated/graphql": ["./src/apollo/types.generated"],
+      "@/lib": ["src/lib"],
+      "@/generated/graphql": ["./src/apollo/types.generated"]
     },
     "strict": true,
     "declaration": false,
