--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,13 @@
-PORT=your-port
-APP_URL=your-app-url
-NODE_ENV=your-env
+PORT=number
+APP_URL=string
+NODE_ENV=
+MONGODB_URL=string
+JWT_SECRET_KEY=string
+EXPRESS_SESSION_SECRET=string
+REDIS_URL=string
+REDIS_KEY_PREFIX=string
+MONGODB_TABLE_PREFIX=string
+NGOO_CONTRACT_ADDRESS=string
+NGOO_CHAIN_ID=string
+NGOO_SIGNER=string
+MONAD_RPC_URL=string
